@@ -1,3 +1,7 @@
+* 2014-10-02 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 34283: Introduced a hard limit when marshalling the XML elements of a WebDAV response with a depth >= 1 recursively
+
 * 2014-09-26 - thorben.betten@open-xchange.com
 
  - Fix for bug 34465: Fixed update for POP3 mail accounts
